--- a/templates/master/index.html
+++ b/templates/master/index.html
@@ -442,7 +442,7 @@
             <div class="container py-5 px-lg-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-3">
-                        <h5 class="text-white mb-4">Get In Touch</h5>
+                        <h5 class="text-white mb-4">Entrar en contacto</h5>
                         <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
                         <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                         <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -499,7 +499,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="https://dylan-marsili.github.io/DT-Programming-Store-ES/">DT | Programming Store</a>, Todos los derechos reservados. 
+                            &copy; <a class="border-bottom" href="https://dtprogrammingstore.github.io/ES/">DT | Programming Store</a>, Todos los derechos reservados. 
                             
                             Diseñada por <a class="border-bottom" href="https://dylan-marsili.github.io/portafolio-es/">Dolan</a>
                         </div>
