--- a/templates/master/testimonial.html
+++ b/templates/master/testimonial.html
@@ -214,7 +214,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="https://dylan-marsili.github.io/DT-Programming-Store-ES/">DT | Programming Store</a>, Todos los derechos reservados. 
+                            &copy; <a class="border-bottom" href="https://dtprogrammingstore.github.io/ES/">DT | Programming Store</a>, Todos los derechos reservados. 
                             
                             Diseñada por <a class="border-bottom" href="https://dylan-marsili.github.io/portafolio-es/">Dolan</a>
                         </div>
