--- a/templates/resi/index.html
+++ b/templates/resi/index.html
@@ -841,7 +841,7 @@
         </div>
         <div class="credits">
 
-         Diseñada por <a href="https://dylan-marsili.github.io/DT-Programming-Store-EN/ ">DT | Programming Store</a>
+         Diseñada por <a href="https://dtprogrammingstore.github.io/ES/ ">DT | Programming Store</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
