--- a/templates/resi/inner-page.html
+++ b/templates/resi/inner-page.html
@@ -151,7 +151,7 @@
           &copy; Derechos de autor <strong><span>Dolan</span></strong>. Reservados todos los derechos
         </div>
  
-          Diseñada por <a href="https://dylan-marsili.github.io/DT-Programming-Store-ES/">DT | Programming Store</a>
+          Diseñada por <a href="https://dtprogrammingstore.github.io/ES/">DT | Programming Store</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
