--- a/templates/tale/faqs.html
+++ b/templates/tale/faqs.html
@@ -294,7 +294,7 @@
         <p>Copyright © 2023 <a href="#">Dolan</a>. Reservados todos los derechos.
 
           <br>Design: <a href="https://dylan-marsili.github.io/portafolio-es/" target="_blank">Dylan Marsili</a> Distribución: <a
-            href="https://dylan-marsili.github.io/DT-Programming-Store-ES/">DT | Programming Store</a>
+            href="https://dtprogrammingstore.github.io/ES/">DT | Programming Store</a>
         </p>
       </div>
     </div>
