--- a/templates/resi/portfolio-details.html
+++ b/templates/resi/portfolio-details.html
@@ -191,7 +191,7 @@
         </div>
         <div class="credits">
   
-          Diseñada por <a href="https://dylan-marsili.github.io/DT-Programming-Store-ES/">DT | Programming Store</a>
+          Diseñada por <a href="https://dtprogrammingstore.github.io/ES/">DT | Programming Store</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
